# template-hexagonal-python-example

./: .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
src/: main.py
src/application/use_cases/: check_service.py
src/domain/models/: health.py
src/domain/ports/: health_repository.py
src/infrastructure/adapters/: github_health_adapter.py
tests/integration/: test_github_health_adapter.py
tests/unit/: test_check_service_use_case.py
