[tool.poetry]
name = "Service-healt-monitor"
version = "0.2.0"
description = "Monitor de salud de servicios externos usando Arquitectura Hexagonal"
authors = ["Gustavo Montupin Villanueva <gmontupin@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.4.0"
pre-commit = "^3.6.0"
